feat: Introduce `audit:drop-triggers` and `audit:rebuild-triggers` commands, along with updated documentation and service provider registration.

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Your Name",
-            "email": "your-email@example.com"
+            "name": "Muhammad Suleman",
+            "email": "suleman09522@gmail.com"
         }
     ],
     "require": {
